Enhance BE to handle multiple shelf, site, status & sort
