# backend/swagger.json
@@ -326,14 +326,16 @@
             "in": "query",
             "name": "shelf",
             "schema": {
-              "type": "string",
-              "enum": [
-                "to read",
-                "reading",
-                "waiting",
-                "dropped",
-                "finished"
-              ],
+              "type": "array",
+              "items": {
+                "enum": [
+                  "to read",
+                  "reading",
+                  "waiting",
+                  "dropped",
+                  "finished"
+                ]
+              },
               "required": false
             }
           },
@@ -349,9 +351,12 @@
             "in": "query",
             "name": "status",
             "schema": {
-              "type": "integer",
-              "minimum": 0,
-              "maximum": 3,
+              "type": "array",
+              "items": {
+                "type": "integer",
+                "minimum": 0,
+                "maximum": 3
+              },
               "required": false
             }
           },
@@ -367,7 +372,10 @@
             "in": "query",
             "name": "site",
             "schema": {
-              "type": "string",
+              "type": "array",
+              "items": {
+                "type": "string"
+              },
               "required": false
             }
           },
@@ -448,9 +456,11 @@
             "in": "query",
             "name": "sort",
             "schema": {
-              "type": "string",
-              "description": "The field name to sort. Add - to sort desc",
-              "example": "reading, -status, name, -newChapCount",
+              "type": "array",
+              "items": {
+                "type": "string"
+              },
+              "description": "The field name to sort. Add - to sort desc. This field can be a string of one filed a string of multiple fields separated by space, or an array of string.",
               "required": false
             }
           }
@@ -768,14 +778,16 @@
             "in": "query",
             "name": "shelf",
             "schema": {
-              "type": "string",
-              "enum": [
-                "to read",
-                "reading",
-                "waiting",
-                "dropped",
-                "finished"
-              ],
+              "type": "array",
+              "items": {
+                "enum": [
+                  "to read",
+                  "reading",
+                  "waiting",
+                  "dropped",
+                  "finished"
+                ]
+              },
               "required": false
             }
           },
@@ -791,9 +803,12 @@
             "in": "query",
             "name": "status",
             "schema": {
-              "type": "integer",
-              "minimum": 0,
-              "maximum": 3,
+              "type": "array",
+              "items": {
+                "type": "integer",
+                "minimum": 0,
+                "maximum": 3
+              },
               "required": false
             }
           },
@@ -809,7 +824,10 @@
             "in": "query",
             "name": "site",
             "schema": {
-              "type": "string",
+              "type": "array",
+              "items": {
+                "type": "string"
+              },
               "required": false
             }
           },
@@ -890,9 +908,11 @@
             "in": "query",
             "name": "sort",
             "schema": {
-              "type": "string",
-              "description": "The field name to sort. Add - to sort desc",
-              "example": "reading, -status, name, -newChapCount",
+              "type": "array",
+              "items": {
+                "type": "string"
+              },
+              "description": "The field name to sort. Add - to sort desc. This field can be a string of one filed a string of multiple fields separated by space, or an array of string.",
               "required": false
             }
           }
@@ -905,51 +925,20 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "total": {
-                      "type": "integer",
-                      "description": "Number of matched mangas"
-                    },
-                    "success": {
+                    "data": {
                       "type": "array",
                       "items": {
-                        "type": "object",
-                        "properties": {
-                          "_id": {
-                            "$ref": "#/components/schemas/Id"
-                          },
-                          "name": {
-                            "type": "string"
-                          },
-                          "link": {
-                            "type": "string",
-                            "format": "uri"
-                          },
-                          "site": {
-                            "type": "string"
-                          }
-                        }
+                        "$ref": "#/components/schemas/Manga"
                       }
                     },
-                    "fail": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "_id": {
-                            "$ref": "#/components/schemas/Id"
-                          },
-                          "name": {
-                            "type": "string"
-                          },
-                          "link": {
-                            "type": "string",
-                            "format": "uri"
-                          },
-                          "site": {
-                            "type": "string"
-                          }
-                        }
-                      }
+                    "page": {
+                      "type": "integer"
+                    },
+                    "totalItem": {
+                      "type": "integer"
+                    },
+                    "totalPage": {
+                      "type": "integer"
                     }
                   }
                 }
